plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    configureEach {
        exclude group: "ch.qos.logback"
        exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    runtimeOnly 'org.xerial:sqlite-jdbc'

    implementation(libs.bundles.spring.boot.web)
    // Source: https://mvnrepository.com/artifact/io.lindstrom/m3u8-parser
    implementation("io.lindstrom:m3u8-parser:0.30")
    // Source: https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper-spring-boot-starter
    implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:4.0.0'
    // Source: https://mvnrepository.com/artifact/com.github.houbb/opencc4j
    implementation("com.github.houbb:opencc4j:1.14.0")
    // Source: https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5
    implementation("org.apache.httpcomponents.client5:httpclient5:5.6.1")
    // Source: https://mvnrepository.com/artifact/org.bytedeco/ffmpeg
    implementation 'org.bytedeco:ffmpeg:8.0.1-1.5.13'
    // Source: https://mvnrepository.com/artifact/org.bytedeco/ffmpeg-platform
    implementation 'org.bytedeco:ffmpeg-platform:8.0.1-1.5.13'
    // Source: https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    implementation 'org.apache.commons:commons-collections4:4.5.0'
    // Quartz for scheduled tasks
    implementation(libs.spring.boot.starter.quartz)
    implementation(libs.spring.boot.starter.websocket)
    // jsoup for XML parsing
    implementation(libs.jsoup)
    implementation(libs.commons.compress)

    // Liquibase for database migration
    implementation(libs.liquibase.core)
    implementation(libs.liquibase.slf4j)

    implementation(platform(libs.log4j.bom))
    implementation(platform(libs.slf4j.bom))
    implementation(platform(libs.okhttp.bom))

    implementation(libs.okhttp)


    implementation(libs.slf4j.api)
    implementation(libs.log4j.slf4j2.impl)
    implementation(libs.lmax.disruptor)
    testImplementation(libs.slf4j.api)
    testImplementation(libs.log4j.slf4j2.impl)

    developmentOnly(libs.spring.boot.devtools)

    annotationProcessor(libs.spring.boot.configuration.processor)

    compileOnly(libs.lombok)
    annotationProcessor(libs.lombok)
    testCompileOnly(libs.lombok)
    testAnnotationProcessor(libs.lombok)

    testImplementation(libs.spring.boot.starter.test)
    testRuntimeOnly(libs.junit.platform.launcher)
}

tasks.test {
    useJUnitPlatform()
    // 显示测试运行时的标准输出和错误信息
    testLogging {
        showStandardStreams = true
    }
}